# desk-research-crewai

./: .env.asimov.example  .env.example  .gitignore  CONFIGURAR_ENV.md  README.md  app.py  deploy_ssh.sh  pyproject.toml  requirements.txt  run_streamlit.sh  sitecustomize.py  streamlit_app.py
data/input_raw/Brand_Audit/: Teste Box 20_05_PORTUGUESE (BRAZIL)_MT.docx  Teste_PORTUGUESE (BRAZIL)_MT.docx  (+20 more)
data/output_ingestor/: Teste_Box_20_05_PORTUGUESE__BRAZIL__MT.json  Teste_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G10_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G11_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G12_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G13_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G14_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G15___Stella_Artois_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G16__Stella_Artois_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G17__Stella_Artois_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G18__Stella_Artois_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G19_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G20_-_Skol_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G21_-_Stella_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G2_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G3_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G4_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G5_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G6_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G7_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G8_PORTUGUESE__BRAZIL__MT.json  _Cerveja__G9_PORTUGUESE__BRAZIL__MT.json  flow_result.json
docs/: ARCHITECTURE.md  COMO_CRIAR_NOVOS_CREWS.md
src/desk_research/: __init__.py  constants.py  main.py
tests/: test_smoke.py
(+64 files in other folders)
